<resources>
    <string name="app_name">Graph Sample App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_oxygen">Blood Oxygen</string>
    <string name="temp">Temperature</string>
    <string name="heart_rate">Heart Rate</string>
</resources>