<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/weekBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="Week"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/monthBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="Month"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/steps"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/stepsChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/distanceChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/caloriesChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bloodPressureChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_oxygen"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bloodOxygenChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/tempChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/heartRateChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />


    </LinearLayout>
</ScrollView>